--- a/style.css
+++ b/style.css
@@ -45,7 +45,8 @@ display: grid;
 grid-template-columns: 1fr 1fr 1fr 1fr;
 gap:10px;
 }
-.span{
+span{
+    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
